[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegrader"
version = "1.0.0"
description = "Grading code using Computer vision and NLP"
readme = "README.md"
authors = [{ name = "Ahmed Heakl", email = "ahmed.heakl@ejust.edu.eg" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
keywords = ["transcoder", "XLM", "natural language", "pytorch"]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver"]

    [project.scripts]
    grade = "codegrader.main:main"

    [project.urls]
    repository = "https://github.com/ahmedheakl/code-autograding"


[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]